[refactor] drop deprecation api